@@ -794,6 +794,7 @@ sub addVirtualMachine {
         VCPU
         VMID
         MAC
+        COMMENT
     /;
 
     if (!$args->{STATUS}) {
@@ -1949,6 +1950,10 @@ The ID of virtual machine in the virtual managment system.
 =item MAC
 
 The list of the MAC addresses of the virtual machine. The delimiter is '/'. e.g: 00:23:18:91:db:8d/00:23:57:31:sb:8e
+
+=item COMMENT
+
+A comment
 
 =back
 
